# npu-mfu-analyzer

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  codemeta.json  llms.txt  pyproject.toml  requirements.txt  test_pattern_matcher.py  test_phase7.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: AIKG_USAGE.md  aikg_integration_design.md  aikg_integration_summary.md  api_reference.md  architecture.md  configuration.md  features.md  installation.md  troubleshooting.md
docs/design/: communication_matrix_design.md  perf_diagnosis_injection_design.md  skills_refactoring_design.md
examples/: analyze_profiling.py  create_mock_aic_data.py  verify_aic_metrics.py  verify_aic_simple.py  verify_aikg_request.py
examples/sample_profiling_small/: README.md  README.zh-CN.md
examples/sample_profiling_small/ascend_sample_rank0/: profiler_info_0.json  profiler_metadata.json
requirements/: base.txt  dev.txt  llm.txt
scripts/: detailed_analysis.py  full_analysis.py  setup_ollama.sh
src/agents/: __init__.py  advisor_agent.py  aic_microarch_agent.py  aikg_integration.py  base_agent.py  communication_agent.py  comparison_agent.py  detailed_operator_agent.py  detailed_operator_agent_v2.py  fusion_rules.py  jitter_agent.py  memory_agent.py  operator_agent.py  orchestrator.py  timeline_agent.py
src/analyzers/: __init__.py  bubble_analyzer.py  comm_splitter.py  communication_matrix_analyzer.py  communication_matrix_visualizer.py  comparison_orchestrator.py  history_comparator.py  host_device_correlator.py  link_performance_dashboard.py  mfu_calculator.py  operator_source_classifier.py  overlap_calculator.py  profiling_diff.py  root_cause_engine.py  similarity_checker.py
src/analyzers/aic/: __init__.py  instruction_analyzer.py  memory_hierarchy_analyzer.py  microarch_report.py  pipeline_analyzer.py  pmu_data_parser.py
src/cli/: __init__.py  aikg_workflow.py  integration_workflow.py  main.py
src/data_loader/: __init__.py  aic_metrics.py  data_summarizer.py  db_query.py  profiling_loader.py  stream_parser.py
src/hardware/: __init__.py  registry.py
src/llm/: __init__.py  llm_interface.py  resilient_llm.py
src/llm/prompts/: __init__.py  system_prompts.py
src/npu_mfu_analyzer/: __init__.py
src/npu_mfu_analyzer/agents/: __init__.py  advisor_agent.py  aic_microarch_agent.py  aikg_integration.py  base_agent.py  communication_agent.py  comparison_agent.py  detailed_operator_agent.py  detailed_operator_agent_v2.py  jitter_agent.py  memory_agent.py  operator_agent.py  orchestrator.py  timeline_agent.py
src/npu_mfu_analyzer/analyzers/: __init__.py  communication_matrix_analyzer.py  communication_matrix_visualizer.py  comparison_orchestrator.py  history_comparator.py  host_device_correlator.py  link_performance_dashboard.py  mfu_calculator.py  operator_source_classifier.py  overlap_calculator.py  profiling_diff.py  root_cause_engine.py  similarity_checker.py  slow_rank_detector.py
src/npu_mfu_analyzer/analyzers/aic/: __init__.py  instruction_analyzer.py  (+4 more)
src/npu_mfu_analyzer/cli/: aikg_workflow.py  main.py
src/npu_mfu_analyzer/data_loader/: __init__.py  aic_metrics.py  data_summarizer.py  data_validator.py  profiling_loader.py  stack_parser.py  stack_types.py  stream_parser.py
src/npu_mfu_analyzer/hardware/: __init__.py
src/npu_mfu_analyzer/llm/: __init__.py  llm_interface.py  resilient_llm.py
src/npu_mfu_analyzer/pattern_matcher/: __init__.py  model_detector.py  parallel_detector.py  universal_matcher.py
src/npu_mfu_analyzer/report/: __init__.py  report_generator.py  templates.py
src/npu_mfu_analyzer/skills/: __init__.py  base_skill.py  registry.py
src/npu_mfu_analyzer/topology/: __init__.py  collective_profiler.py  topology_analyzer.py
src/npu_mfu_analyzer/web/: __init__.py  app.py
src/pattern_matcher/: __init__.py  framework_detector.py  universal_matcher.py
src/report/: __init__.py  excel_exporter.py  report_generator.py  templates.py
src/roofline/: __init__.py  roofline_model.py  whatif_simulator.py
src/skills/: engine.py
src/skills/python_skills/: mfu_skill.py  overlap_skill.py  slow_rank_skill.py
src/skills/root_cause_analysis/: SKILL.md
src/skills/v2/: base.py  demo.py  engine.py  loader.py  mcp_server.py  registry.py  sdk.py  skill_cli.py
src/topology/: __init__.py  hccs_ring_parser.py
src/web/: __init__.py  app.py
src/web/static/: index.html
tests/: conftest.py  test_agents.py  test_data_loader.py
tests/integration/: test_pattern_recognition.py  test_real_profiling.py  test_roofline_whatif.py  test_skill_engine.py  test_topology_and_jitter.py
tests/unit/: test_agents.py  test_aikg_integration.py  test_analyzers.py  test_communication_matrix_analyzer.py  test_comparison.py  test_data_loader.py  test_data_validator.py  test_decimal_fix.py  test_detailed_operator_agent_v2.py  test_diagnosis_skills.py  test_fusion_analyzer.py  test_llm.py  test_rank_detection.py  test_top_kernels.py
(+52 files in other folders)
