[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npu-mfu-analyzer"
version = "0.5.0"
description = "NPU MFU Analyzer - LLM Training Performance Analysis Tool for Ascend NPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9,<3.15"
authors = [
    {name = "NPU MFU Analyzer Team", email = "lishanni513@gmail.com"}
]
maintainers = [
    {name = "lishanni", email = "lishanni513@gmail.com"}
]
keywords = [
    "npu",
    "ascend",
    "huawei-ascend",
    "mfu",
    "model-flops-utilization",
    "llm-training",
    "performance-analysis",
    "profiling",
    "deep-learning",
    "pytorch",
    "distributed-training",
    "ai-infrastructure",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0,<=1.26.4",
    "pandas>=2.0.0,<=2.3.2",
    "ijson>=3.2.0",
    "sqlalchemy>=2.0.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "prettytable>=3.0.0",
    "networkx>=3.0",
    "jinja2>=3.0.0",
    "xlsxwriter>=3.0.6",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
]
local-llm = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]
claude = [
    "anthropic>=0.18.0",
]
deepseek = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
all = [
    "npu-mfu-analyzer[web,local-llm,langchain,claude,dev]",
]

[project.scripts]
npu-analyzer = "npu_mfu_analyzer.cli.main:cli"

[project.urls]
Homepage = "https://github.com/lishanni/npu-mfu-analyzer"
Documentation = "https://github.com/lishanni/npu-mfu-analyzer#readme"
Repository = "https://github.com/lishanni/npu-mfu-analyzer.git"
Issues = "https://github.com/lishanni/npu-mfu-analyzer/issues"
Changelog = "https://github.com/lishanni/npu-mfu-analyzer/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
